fix(admin): show actual system details
